--- a/MyApplication3/app/src/main/res/layout/fragment_first.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_first.xml
@@ -30,6 +30,15 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_first" />
+            app:layout_constraintTop_toBottomOf="@id/button_first"
+            tools:ignore="VisualLintLongText" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Match #"
+            tools:layout_editor_absoluteX="107dp"
+            tools:layout_editor_absoluteY="271dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
