--- a/MyApplication3/app/src/main/res/navigation/nav_graph.xml
+++ b/MyApplication3/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
+        <action
+            android:id="@+id/action_FirstFragment_to_pitFragment"
+            app:destination="@id/pitFragment" />
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
@@ -36,8 +39,8 @@
             app:destination="@id/FirstFragment" />
     </fragment>
     <fragment
-        android:id="@+id/teleop"
-        android:name="com.example.myapplication.HomePage"
-        android:label="fragment_teleop"
-        tools:layout="@layout/fragment_mainpage" />
+        android:id="@+id/pitFragment"
+        android:name="com.example.myapplication.PitFragment"
+        android:label="fragment_pit"
+        tools:layout="@layout/fragment_pit" />
 </navigation>
