--- a/MyApplication3/app/src/main/res/layout/fragment_second.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_second.xml
@@ -7,10 +7,19 @@
     tools:context=".SecondFragment">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout_first"
         android:layout_width="match_parent"
         android:layout_height="730dp"
-        android:padding="0dp"
-        android:id = "@+id/relativeLayout_first">
+        android:padding="0dp">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="360px"
+            android:layout_height="wrap_content"
+            android:text="Tele-OP"
+            android:translationX="150dp"
+            android:translationY="50dp"
+            android:textSize="38dp" />
 
         <Button
             android:id="@+id/button_second"
@@ -18,6 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:text="@string/previous"
+            android:translationX="150dp"
+            android:translationY="650dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.547"
             app:layout_constraintStart_toStartOf="parent"
