--- a/MyApplication3/app/src/main/res/navigation/nav_graph.xml
+++ b/MyApplication3/app/src/main/res/navigation/nav_graph.xml
@@ -43,5 +43,14 @@
         android:id="@+id/pitFragment"
         android:name="com.example.myapplication.PitFragment"
         android:label="fragment_pit"
-        tools:layout="@layout/fragment_pit" />
+        tools:layout="@layout/fragment_pit" >
+        <action
+            android:id="@+id/action_pitFragment_to_HomePage"
+            app:destination="@id/HomePage" />
+    </fragment>
+    <fragment
+        android:id="@+id/HomePage"
+        android:name="com.example.myapplication.HomePage"
+        android:label="fragment_homepage"
+        tools:layout="@layout/fragment_homepage" />
 </navigation>
