added working yes/no button for working auto

--- a/MyApplication3/app/src/main/res/layout/fragment_third.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_third.xml
@@ -15,19 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="63dp"
         android:layout_marginTop="168dp"
-        android:text="@string/No"
+        android:text="@string/Yes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="73dp"
-        android:text="@string/No"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="NotSibling" />
 
     <TextView
         android:id="@+id/textView4"
@@ -38,5 +28,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/No"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/No"
+        tools:layout_editor_absoluteX="238dp"
+        tools:layout_editor_absoluteY="167dp"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
