added working yes/no button

--- a/MyApplication3/app/src/main/res/layout/fragment_third.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_third.xml
@@ -13,9 +13,11 @@
         android:id="@+id/Yes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="63dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="168dp"
+        android:layout_marginEnd="18dp"
         android:text="@string/Yes"
+        app:layout_constraintEnd_toStartOf="@+id/No"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,8 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/No"
-        tools:layout_editor_absoluteX="238dp"
-        tools:layout_editor_absoluteY="167dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/Yes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Yes"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
