added page 2 for auto mode, changed the way you access fragments to represent how the match will go.

--- a/MyApplication3/app/src/main/res/layout/fragment_homepage.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_homepage.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
-        android:text="10"
+        android:text="@string/ten"
         android:textColor="#FFFFFF"
         android:textSize="96sp"
         app:layout_constraintBottom_toTopOf="@+id/Random_Button"
@@ -29,7 +29,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="156dp"
         android:backgroundTint="#00107E"
-        android:text="Toast"
+        android:text="@string/Toast"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -46,7 +46,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="156dp"
         android:backgroundTint="#00107E"
-        android:text="Count"
+        android:text="@string/Count"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -64,7 +64,7 @@
         android:layout_marginEnd="51dp"
         android:layout_marginBottom="156dp"
         android:backgroundTint="#00107E"
-        android:text="Random"
+        android:text="@string/Random"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
