--- a/MyApplication3/app/src/main/res/layout/fragment_second.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_second.xml
@@ -22,17 +22,11 @@
             android:textSize="38dp" />
 
         <Button
-            android:id="@+id/button_second"
-            android:layout_width="300px"
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:text="@string/previous"
-            android:translationX="150dp"
-            android:translationY="650dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.547"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Button" />
+
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
