--- a/MyApplication3/app/src/main/res/layout/fragment_pit.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_pit.xml
@@ -72,18 +72,24 @@
     <TableRow
         android:id="@+id/bottomPitRow"
         android:layout_width="match_parent"
-        android:layout_height="81dp" >
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/pit_game_title"
-            android:layout_width="206dp"
+            android:layout_width="254dp"
             android:layout_height="247dp"
             android:layout_weight="@integer/material_motion_duration_long_2"
             android:gravity="bottom|end|top|start"
+            android:padding="20dp"
             android:rotation="30"
             android:text="@string/game_title"
-            android:padding="20dp"
             android:textColor="#07C6B5"
             android:textSize="60sp" />
+
+        <Button
+            android:id="@+id/toAuto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/toAuto" />
     </TableRow>
 </TableLayout>
