--- a/MyApplication3/app/src/main/res/layout/fragment_third2.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_third2.xml
@@ -7,18 +7,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<resources tools:ignore="MissingConstraints">
 
-</resources>
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="33dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginBottom="246dp"
         android:text="Auto cont."
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintBottom_toTopOf="@+id/contact"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,8 +29,7 @@
         android:layout_marginBottom="54dp"
         android:text="Teleop"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/typeContact" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
@@ -68,15 +65,14 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
 
     <Spinner
-        android:id="@+id/typeContact"
-        android:layout_width="189dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="338dp"
-        android:layout_marginBottom="236dp"
-        app:layout_constraintBottom_toTopOf="@+id/toTeleop"
+        android:id="@+id/contact"
+        android:layout_width="197dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="374dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
