--- a/MyApplication3/app/src/main/res/navigation/nav_graph.xml
+++ b/MyApplication3/app/src/main/res/navigation/nav_graph.xml
@@ -23,10 +23,9 @@
         android:name="com.example.myapplication.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
-
         <action
-            android:id="@+id/action_SecondFragment_to_ThirdFragment"
-            app:destination="@id/ThirdFragment" />
+            android:id="@+id/action_SecondFragment_to_SecondFragment2"
+            app:destination="@id/SecondFragment2" />
     </fragment>
     <fragment
         android:id="@+id/ThirdFragment"
@@ -67,4 +66,9 @@
             android:id="@+id/action_thirdFragment2_to_SecondFragment"
             app:destination="@id/SecondFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/SecondFragment2"
+        android:name="com.example.myapplication.SecondFragment2"
+        android:label="Second Fragment 2"
+        tools:layout="@layout/fragment_second2" />
 </navigation>
