--- a/MyApplication3/app/src/main/res/layout/fragment_second2.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_second2.xml
@@ -25,7 +25,7 @@
             android:clickable="false"
             android:textSize="26dp"
             android:translationX="150dp"
-            android:translationY="193dp"
+            android:translationY="103dp"
             app:cornerRadius="100dp" />
 
         <Button
@@ -37,7 +37,7 @@
             android:clickable="false"
             android:textSize="26dp"
             android:translationX="150dp"
-            android:translationY="258dp"
+            android:translationY="173dp"
             app:cornerRadius="100dp" />
 
         <Spinner
@@ -45,9 +45,10 @@
             android:layout_width="205dp"
             android:layout_height="58dp"
             android:backgroundTint="#00FFFFFF"
+            android:backgroundTintMode="src_over"
             android:spinnerMode="dropdown"
             android:translationX="150dp"
-            android:translationY="230dp"
+            android:translationY="140dp"
             android:visibility="visible" />
 
         <Spinner
@@ -55,9 +56,10 @@
             android:layout_width="205dp"
             android:layout_height="58dp"
             android:backgroundTint="#00FFFFFF"
+            android:backgroundTintMode="src_over"
             android:spinnerMode="dropdown"
             android:translationX="150dp"
-            android:translationY="295dp"
+            android:translationY="210dp"
             android:visibility="visible" />
 
         <TextView
@@ -68,14 +70,14 @@
             android:text="Character Limit: 0/150"
             android:textSize="15dp"
             android:translationX="30dp"
-            android:translationY="205dp" />
+            android:translationY="608dp" />
 
 
         <TextView
             android:id="@+id/title"
             android:layout_width="260dp"
             android:layout_height="wrap_content"
-            android:text="Tele-OP Part 2"
+            android:text="ENDGAME"
             android:textSize="38dp"
             android:translationX="150dp"
             android:translationY="50dp" />
@@ -87,15 +89,17 @@
             android:text="Notes in Trap (Stuck)"
             android:textSize="26dp"
             android:translationX="30dp"
-            android:translationY="460dp" />
+            android:translationY="290dp" />
+
         <TextView
             android:id="@+id/notesThrown"
             android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:text="Notes Thrown"
+            android:text="Notes Thrown by Player"
             android:textSize="26dp"
             android:translationX="30dp"
-            android:translationY="960dp" />
+            android:translationY="960dp"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/chain"
@@ -105,7 +109,7 @@
             android:text="Chain Status"
             android:textSize="26dp"
             android:translationX="30dp"
-            android:translationY="230dp" />
+            android:translationY="140dp" />
 
         <TextView
             android:id="@+id/harmony"
@@ -116,7 +120,7 @@
             android:text="Harmony Status"
             android:textSize="26dp"
             android:translationX="30dp"
-            android:translationY="295dp" />
+            android:translationY="210dp" />
 
         <TextView
             android:id="@+id/notesStuckCounter"
@@ -125,7 +129,17 @@
             android:text="0"
             android:textSize="26dp"
             android:translationX="245dp"
-            android:translationY="440dp" />
+            android:translationY="315dp" />
+
+        <TextView
+            android:id="@+id/notesThrownCounter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="26dp"
+            android:translationX="245dp"
+            android:translationY="960dp"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/notesSuccessCounter"
@@ -134,7 +148,17 @@
             android:text="0"
             android:textSize="26dp"
             android:translationX="245dp"
-            android:translationY="545dp" />
+            android:translationY="405dp" />
+
+        <TextView
+            android:id="@+id/notesHitCounter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="26dp"
+            android:translationX="245dp"
+            android:translationY="1035dp"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/notesSuccess"
@@ -143,15 +167,16 @@
             android:text="Notes in Trap (Successful)"
             android:textSize="26dp"
             android:translationX="30dp"
-            android:translationY="535dp" />
+            android:translationY="400dp" />
         <TextView
             android:id="@+id/notesHit"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Notes Spotlighted"
+            android:text="Notes Spotlighted by Player"
             android:textSize="26dp"
             android:translationX="30dp"
-            android:translationY="1035dp" />
+            android:translationY="1035dp"
+            android:visibility="gone"/>
 
         <Button
 
@@ -179,8 +204,21 @@
             android:text="-"
             android:textSize="26dp"
             android:translationX="150dp"
-            android:translationY="400dp"
+            android:translationY="275dp"
             app:cornerRadius="100dp" />
+
+        <Button
+            android:id="@+id/minusNotesThrown"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="36dp"
+            android:backgroundTint="#73C2F0"
+            android:text="-"
+            android:textSize="26dp"
+            android:translationX="150dp"
+            android:translationY="960dp"
+            app:cornerRadius="100dp"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/plusNotesStuck"
@@ -191,8 +229,21 @@
             android:text="+"
             android:textSize="26dp"
             android:translationX="300dp"
-            android:translationY="400dp"
+            android:translationY="275dp"
             app:cornerRadius="100dp" />
+
+        <Button
+            android:id="@+id/plusNotesThrown"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="36dp"
+            android:backgroundTint="#73C2F0"
+            android:text="+"
+            android:textSize="26dp"
+            android:translationX="300dp"
+            android:translationY="960dp"
+            app:cornerRadius="100dp"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/minusNotesSuccess"
@@ -203,8 +254,21 @@
             android:text="-"
             android:textSize="26dp"
             android:translationX="150dp"
-            android:translationY="505dp"
+            android:translationY="365dp"
             app:cornerRadius="100dp" />
+
+        <Button
+            android:id="@+id/minusNotesHit"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="36dp"
+            android:backgroundTint="#73C2F0"
+            android:text="-"
+            android:textSize="26dp"
+            android:translationX="150dp"
+            android:translationY="365dp"
+            app:cornerRadius="1035dp"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/plusNotesSuccess"
@@ -215,8 +279,21 @@
             android:text="+"
             android:textSize="26dp"
             android:translationX="300dp"
-            android:translationY="505dp"
+            android:translationY="365dp"
             app:cornerRadius="100dp" />
+
+        <Button
+            android:id="@+id/plusNotesHit"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="36dp"
+            android:backgroundTint="#73C2F0"
+            android:text="+"
+            android:textSize="26dp"
+            android:translationX="300dp"
+            android:translationY="365dp"
+            app:cornerRadius="1035dp"
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/pop"
@@ -236,7 +313,7 @@
             android:trackTint="#73C2F0"
             android:trackTintMode="src_over"
             android:translationX="30dp"
-            android:translationY="380dp" />
+            android:translationY="500dp" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input"
@@ -245,7 +322,7 @@
             android:background="#73C2F0"
             android:backgroundTint="#73C2F0"
             android:translationX="30dp"
-            android:translationY="140dp"
+            android:translationY="545dp"
             app:boxCollapsedPaddingTop="0dp">
 
             <com.google.android.material.textfield.TextInputEditText
