--- a/MyApplication3/app/src/main/res/layout/fragment_pit.xml
+++ b/MyApplication3/app/src/main/res/layout/fragment_pit.xml
@@ -90,6 +90,6 @@
             android:id="@+id/toAuto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/toAuto" />
+            android:text="Auto" />
     </TableRow>
 </TableLayout>
