--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,80 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".FirstFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        tools:ignore="ExtraText">
+        android:layout_height="730dp"
+        android:padding="0dp">
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
+            android:id="@+id/cont"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="176dp"
-            android:layout_marginTop="628dp"
-            android:text="Match #"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Continue"
+            android:translationY="118dp"
+            android:translationX="290dp"/>
+        <Button
+            android:id="@+id/back"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:translationY="118dp"
+            android:translationX="10dp"/>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="75dp"
             android:text="Team Selection"
             android:textSize="42dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:translationX="60dp"
+            android:translationY="50dp"/>
 
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/pop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="187dp"
-            android:layout_marginEnd="14dp"
-            android:layout_marginBottom="16dp"
             android:src="@drawable/pop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
+            android:translationY="500dp"
+            android:translationX="30dp"/>
 
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="275dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="57dp"
-            android:layout_marginTop="39dp"
-            android:layout_marginEnd="63dp"
-            android:layout_marginBottom="70dp"
-            android:text="Input Team number below"
-            android:textSize="20dp"
-            android:translationY="200dp"
-            app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditText"
-            android:layout_width="366dp"
-            android:layout_height="561dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="262dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="187dp"
-            android:hint="hint"
-            app:layout_constraintBottom_toTopOf="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            android:id="@+id/input"
+            android:layout_width="140dp"
+            android:layout_height="66dp"
+            android:hint="Team Number"
+            android:inputType="number"
+            android:translationX="133dp"
+            android:translationY="110dp" />
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
