--- a/app/src/main/res/layout/fragment_second2.xml
+++ b/app/src/main/res/layout/fragment_second2.xml
@@ -81,6 +81,14 @@
             android:textSize="38dp"
             android:translationX="150dp"
             android:translationY="50dp" />
+        <TextView
+            android:id="@+id/team"
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
+            android:text="Team 0"
+            android:textSize="26dp"
+            android:translationX="150dp"
+            android:translationY="88dp" />
 
         <TextView
             android:id="@+id/notesStuck"
@@ -314,6 +322,8 @@
             android:id="@+id/pop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:rotation="0"
+            android:rotationY="0"
             android:src="@drawable/pop"
             android:translationX="0dp"
             android:translationY="0dp" />
